--- a/app/src/main/res/layout/dialogue_layout.xml
+++ b/app/src/main/res/layout/dialogue_layout.xml
@@ -2,21 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="120dp"
+    android:layout_height="200dp"
     android:layout_margin="@dimen/_10sdp"
-    android:background="@drawable/editext_shape"
-    android:backgroundTint="@color/primary_red"
+    android:background="@drawable/mydialogue_shape"
     android:gravity="center"
     android:layout_gravity="center"
     android:outlineSpotShadowColor="@color/primary_red"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:layout_marginBottom="@dimen/_20sdp"
         android:layout_weight="10"
         android:layout_margin="@dimen/_30sdp"
         app:cardBackgroundColor="#EEEDE7"
         app:cardCornerRadius="@dimen/_600sdp"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -32,7 +31,47 @@
             android:paddingLeft="@dimen/_10sdp" />
 
 
+
+
+
     </androidx.cardview.widget.CardView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+    <Button
+        android:id="@+id/createTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="Title"
+        android:outlineSpotShadowColor="@color/black"
+        android:fontFamily="@font/mono"
+        android:textSize="@dimen/_15sdp"
+        android:textStyle="bold"
+        android:textColor="@color/primary_red"
+        android:layout_marginRight="@dimen/_20sdp"
+        android:backgroundTint="#EEEDE7"/>
+
+    <Button
+        android:id="@+id/cancelBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Cancel"
+        android:outlineSpotShadowColor="@color/black"
+        android:fontFamily="@font/mono"
+        android:textSize="@dimen/_15sdp"
+        android:textStyle="bold"
+        android:textColor="@color/primary_red"
+        android:backgroundTint="#EEEDE7"/>
+
+    </LinearLayout>
+
+
+
 
 
 
