--- a/app/src/main/res/layout/dialogue_layout.xml
+++ b/app/src/main/res/layout/dialogue_layout.xml
@@ -30,11 +30,35 @@
             android:paddingStart="@dimen/_10sdp"
             android:paddingLeft="@dimen/_10sdp" />
 
-
-
-
-
     </androidx.cardview.widget.CardView>
+
+
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:layout_weight="10"-->
+<!--        android:layout_margin="@dimen/_30sdp"-->
+<!--        app:cardBackgroundColor="#EEEDE7"-->
+<!--        app:cardCornerRadius="@dimen/_600sdp"-->
+
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/edtValuetitle"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="56dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:background="@null"-->
+<!--            android:fontFamily="@font/mono"-->
+<!--            android:hint="Create New Value ..."-->
+<!--            android:paddingStart="@dimen/_10sdp"-->
+<!--            android:paddingLeft="@dimen/_10sdp" />-->
+
+<!--    </androidx.cardview.widget.CardView>-->
+
+
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
