--- a/app/src/main/res/layout/update_dialoge.xml
+++ b/app/src/main/res/layout/update_dialoge.xml
@@ -1,56 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/_300sdp"
-    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primary_red"
-        android:gravity="center_horizontal"
-        android:id="@+id/update_dialogue"
-        android:orientation="vertical">
+
+
+        <com.scwang.wave.MultiWaveHeader
+            android:id="@+id/waveHeader"
+            android:layout_width="match_parent"
+            android:layout_height="230dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            app:mwhCloseColor="@color/primary_red"
+            app:mwhStartColor="@color/primary_red"
+            app:mwhWaveHeight="60dp" />
 
         <TextView
             android:id="@+id/update_key_title"
+            android:layout_above="@+id/filledTextField_key"
+            android:layout_marginStart="@dimen/_100sdp"
+            android:layout_marginBottom="@dimen/_80sdp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_5sdp"
             android:fontFamily="@font/mono"
-            android:text="Key-Title"
+            android:text="Update-Data"
             android:textColor="@color/white"
             android:textSize="@dimen/_20sdp"
             android:textStyle="bold" />
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/filledTextField_key"
+
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/waveHeader"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="32dp"
+            android:hint="Key-Title">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text_key"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/filledTextField_key2"
+
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
             android:layout_width="match_parent"
             android:layout_height="@dimen/_200sdp"
-            android:layout_margin="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:layout_weight="1"
-            app:cardBackgroundColor="#ccbfe9"
-            app:cardCornerRadius="@dimen/_10sdp">
+            android:layout_below="@+id/waveHeader"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="90dp"
+            android:layout_marginEnd="32dp"
+            android:hint="Value">
 
-            <TextView
-                android:id="@+id/update_edtkeytitle"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text_key2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="top"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:background="@null"
-                android:fontFamily="@font/mono"
-                android:hint="Create New Title Key..."
-                android:paddingStart="@dimen/_10sdp"
-                android:paddingLeft="@dimen/_10sdp"
-                android:textSize="@dimen/_10sdp" />
+                android:layout_height="match_parent" />
 
 
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/update_btn"
+            android:layout_below="@+id/filledTextField_key2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            android:text="Update" />
+
+        <Button
+            android:id="@+id/gen_btn"
+            android:layout_below="@+id/update_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+
+            android:layout_marginEnd="32dp"
+            android:text="Generate"
+            />
+
+
+
 
 
 
