--- a/app/src/main/res/menu/sidemenu.xml
+++ b/app/src/main/res/menu/sidemenu.xml
@@ -26,6 +26,10 @@
                    android:icon="@drawable/ic_share"
                    android:title="Share"/>
 
+               <item android:id="@+id/aboutcheat"
+                   android:icon="@drawable/ic_cheatcode"
+                   android:title="About Code"/>
+
            </menu>
 
        </item>
